--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -9,17 +9,19 @@ on:
         default: 'x86_64'
         type: choice
         options:
-          - 'x86_64'
+          - 'armv8'
           - 'nanopi-r4s'
           - 'nanopi-r5s'
+          - 'netgear_r8500'
+          - 'x86_64'
       version:
         description: 'Select the build version'
         required: true
         default: 'release'
         type: choice
         options:
-         - 'release'
-         - 'snapshot-24.10'
+          - 'release'
+          - 'snapshot-24.10'
       ccache:
         description: 'Enable ccache (Use Cache to speed up next build)'
         type: boolean
@@ -33,7 +35,7 @@ on:
         description: 'Build options (separate multiple options with spaces)'
         required: false
         default: 'BUILD_FAST=y ENABLE_BPF=y ENABLE_LTO=y ENABLE_LRNG=y ENABLE_MOLD=y KERNEL_CLANG_LTO=y'
-        type: string         
+        type: string
   schedule:
     - cron: '0 19 * * *'  # 每天 UTC 19:00 运行，相当于北京时间凌晨 3:00
     
@@ -43,14 +45,14 @@ jobs:
     runs-on: ubuntu-24.04
     defaults:
       run:
-        shell: bash 
+        shell: bash
 
     steps:
     - name: Checkout
       continue-on-error: true
       uses: actions/checkout@main
       with:
-        path: OpenWrt-Action
+        path: r4s_build_script
 
     - name: Setup variables
       run: |
@@ -58,7 +60,7 @@ jobs:
         git config --global user.name 'actions'
         git config --global user.email 'action@github.com'
         echo build_dir="/builder" >> "$GITHUB_ENV"
-        [ "${{ github.event.inputs.version }}" = release ] && echo build_version="rc2" >> "$GITHUB_ENV" || echo build_version="dev" >> "$GITHUB_ENV"    
+        [ "${{ github.event.inputs.version }}" = release ] && echo build_version="rc2" >> "$GITHUB_ENV" || echo build_version="dev" >> "$GITHUB_ENV"
 
     - name: Show system
       run: |
@@ -82,18 +84,18 @@ jobs:
         echo "    root * $(pwd)/r4s_build_script" >> caddyfile
         echo "    file_server browse" >> caddyfile
         echo "}" >> caddyfile
-        sudo /usr/bin/caddy start --config caddyfile --adapter caddyfile   
+        sudo /usr/bin/caddy start --config caddyfile --adapter caddyfile
 
     - name: Free disk space
-      uses: oppen321/actions@free-disk
+      uses: sbwml/actions@free-disk
       with:
         build-mount-path: /builder
 
     - name: Build System Setup
-      uses: oppen321/actions@openwrt-build-setup
+      uses: sbwml/actions@openwrt-build-setup
 
     - name: Install LLVM
-      uses: oppen321/actions@install-llvm
+      uses: sbwml/actions@install-llvm
 
     - name: Restore Cached
       if: ${{ github.event.inputs.ccache == 'true' && github.event.inputs.device != 'armv8' && github.event.inputs.device != 'nanopi-r4s' }}
@@ -201,6 +203,21 @@ jobs:
           cp -a openwrt/bin/targets/x86/*/*-x86-64-generic.manifest info/manifest.txt
           cp -a openwrt/bin/targets/x86/*/config.buildinfo info/config.buildinfo
           cd rom && sha256sum *gz > ../info/sha256sums.txt
+        elif [ "${{ github.event.inputs.device }}" = "netgear_r8500" ]; then
+          cp -a openwrt/bin/targets/bcm53xx/generic/*-bcm53xx-generic-netgear_r8500-squashfs.chk rom/
+          cp -a openwrt/bin/targets/bcm53xx/generic/*.manifest info/manifest.txt
+          cp -a openwrt/bin/targets/bcm53xx/generic/config.buildinfo info/config.buildinfo
+          cd rom && sha256sum * > ../info/sha256sums.txt
+        elif [ "${{ github.event.inputs.device }}" = "armv8" ]; then
+          tar zcf rom/u-boot-qemu_armv8.tar.gz -C openwrt/bin/targets/armsr/armv8*/ ./u-boot-qemu_armv8
+          cp -a openwrt/bin/targets/armsr/armv8*/*-generic-initramfs-kernel.bin rom/
+          cp -a openwrt/bin/targets/armsr/armv8*/*-generic-kernel.bin rom/
+          cp -a openwrt/bin/targets/armsr/armv8*/*-generic-ext4-combined-efi.img.gz rom/
+          cp -a openwrt/bin/targets/armsr/armv8*/*-generic-squashfs-combined-efi.img.gz rom/
+          cp -a openwrt/bin/targets/armsr/armv8*/*-rootfs.tar.gz rom/
+          cp -a openwrt/bin/targets/armsr/armv8*/*.manifest info/manifest.txt
+          cp -a openwrt/bin/targets/armsr/armv8*/config.buildinfo info/config.buildinfo
+          cd rom && sha256sum * > ../info/sha256sums.txt
         fi
 
     - name: Upload artifacts
@@ -219,4 +236,4 @@ jobs:
         commit: master
         replacesArtifacts: true
         token: ${{ secrets.GITHUB_TOKEN }}
-        artifacts: ${{ env.build_dir }}/rom/*        
+        artifacts: ${{ env.build_dir }}/rom/*
