--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -219,6 +219,8 @@ jobs:
           cp -a openwrt/bin/targets/armsr/armv8*/config.buildinfo info/config.buildinfo
           cd rom && sha256sum * > ../info/sha256sums.txt
         fi
+        cd ..
+        tar zcf rom/buildinfo_${{ matrix.model }}.tar.gz info
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
