--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -235,7 +235,7 @@ jobs:
         name: ${{ env.latest_release }}
         allowUpdates: true
         tag: ${{ env.latest_release }}
-        commit: master
+        commit: openwrt-24.10
         replacesArtifacts: true
         token: ${{ secrets.TOKEN_OPPEN321 }}
         artifacts: ${{ env.build_dir }}/rom/*
