--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -2,63 +2,36 @@ name: Build releases
 
 on:
   workflow_dispatch:
-    inputs:
-      device:
-        description: 'Select the build device'
-        required: true
-        default: 'x86_64'
-        type: choice
-        options:
-          - 'armv8'
-          - 'nanopi-r4s'
-          - 'nanopi-r5s'
-          - 'netgear_r8500'
-          - 'x86_64'
-      version:
-        description: 'Select the build version'
-        required: true
-        default: 'release'
-        type: choice
-        options:
-          - 'release'
-          - 'snapshot-24.10'
-      ccache:
-        description: 'Enable ccache (Use Cache to speed up next build)'
-        type: boolean
-        default: true
-      lan_addr:
-        description: 'Setting default LAN address'
-        required: true
-        default: '10.0.0.1'
-        type: string
-      build_options:
-        description: 'Build options (separate multiple options with spaces)'
-        required: false
-        default: 'BUILD_FAST=y ENABLE_BPF=y ENABLE_LTO=y ENABLE_LRNG=y ENABLE_MOLD=y KERNEL_CLANG_LTO=y ENABLE_OTA=y'
-        type: string
-    
+  repository_dispatch:
+    types: [release]
+
 jobs:
   build:
-    name: Build ${{ github.event.inputs.device }}
+    name: Build ${{ matrix.model }}-${{ matrix.tag.version }}
     runs-on: ubuntu-24.04
     defaults:
       run:
         shell: bash
+    strategy:
+      fail-fast: false
+      matrix:
+        model:
+          - armv8
+          - nanopi-r4s
+          - nanopi-r5s
+          - x86_64
+          - netgear_r8500
+        tag:
+          - type: rc2
+            version: openwrt-24.10
 
     steps:
-    - name: Checkout
-      continue-on-error: true
-      uses: actions/checkout@main
-      with:
-        path: OpenWrt-Action
-
     - name: Setup variables
       run: |
         sudo timedatectl set-timezone 'Asia/Shanghai'
         git config --global user.name 'actions'
         git config --global user.email 'action@github.com'
         echo build_dir="/builder" >> "$GITHUB_ENV"
-        [ "${{ github.event.inputs.version }}" = release ] && echo build_version="rc2" >> "$GITHUB_ENV" || echo build_version="dev" >> "$GITHUB_ENV"
 
     - name: Show system
       run: |
@@ -74,139 +47,88 @@ jobs:
         uname -a
         echo
 
-    - name: Install Caddy Server
-      run: |
-        sudo curl -sL -o /usr/bin/caddy https://github.com/sbwml/r4s_build_script/releases/download/caddy/caddy
-        sudo chmod 755 /usr/bin/caddy
-        echo ":8080 {" > caddyfile
-        echo "    root * $(pwd)/OpenWrt-Action" >> caddyfile
-        echo "    file_server browse" >> caddyfile
-        echo "}" >> caddyfile
-        sudo /usr/bin/caddy start --config caddyfile --adapter caddyfile
-
     - name: Free disk space
-      uses: oppen321/actions@free-disk
+      uses: sbwml/actions@free-disk
       with:
         build-mount-path: /builder
 
     - name: Build System Setup
-      uses: oppen321/actions@openwrt-build-setup
+      uses: sbwml/actions@openwrt-build-setup
 
     - name: Install LLVM
-      uses: oppen321/actions@install-llvm
+      uses: sbwml/actions@install-llvm
 
     - name: Restore Cached
-      if: ${{ github.event.inputs.ccache == 'true' && github.event.inputs.device != 'armv8' && github.event.inputs.device != 'nanopi-r4s' }}
+      if: ${{ matrix.model != 'armv8' && matrix.model != 'nanopi-r4s' }}
       uses: actions/cache/restore@v4
       with:
         path: /builder/.ccache
-        key: openwrt-24.10-${{ github.event.inputs.device }}-ccache
+        key: ${{ matrix.tag.version }}-${{ matrix.model }}
 
     - name: Restore Cached (releases)
-      if: ${{ github.event.inputs.ccache == 'true' && github.event.inputs.device == 'armv8' || github.event.inputs.device == 'nanopi-r4s' }}
+      if: ${{ matrix.model == 'armv8' || matrix.model == 'nanopi-r4s' }}
       continue-on-error: true
       working-directory: /builder
       run: |
-        curl -s https://api.github.com/repos/${{ github.repository }}/releases | grep 'browser_download_url' | grep ccache | grep ${{ github.event.inputs.device }} | awk -F '"' '{print $4}' | grep -v '^$' | xargs -n 1 wget -q
-        cat ${{ github.event.inputs.device }}.tar.* | tar -xf - || true
-        rm -rf ${{ github.event.inputs.device }}.tar.* || true
-        [ -d .ccache ] && cache_size=$(du -sb .ccache | awk '{print $1}') || cache_size=0
+        wget -q https://github.com/${{ github.repository }}/releases/download/ccache/${{ matrix.model }}.tar.00 || true
+        wget -q https://github.com/${{ github.repository }}/releases/download/ccache/${{ matrix.model }}.tar.01 || true
+        cat ${{ matrix.model }}.tar.* | tar -xf - || true
+        rm -rf ${{ matrix.model }}.tar.* || true
+        cache_size=$(du -sb .ccache | awk '{print $1}')
         cache_size_mb=$(echo "scale=0; ${cache_size} / (1024 * 1024)" | bc)
         echo "Cache Size: ~${cache_size_mb} MB (${cache_size} B)"
         echo "Cache restored successfully"
-        echo "Cache restored from key: ${{ github.event.inputs.device }}"
+        echo "Cache restored from key: ${{ matrix.model }}"
 
     - name: Compile OpenWrt
-      working-directory: /builder
       id: compile
-      continue-on-error: true
-      run: |
-        export ${{ github.event.inputs.build_options }} LAN=${{ github.event.inputs.lan_addr }} USE_GCC15=y
-        [ ${{ github.event.inputs.ccache }} = 'true' ] && export ENABLE_CCACHE=y
-        bash <(curl -sS http://127.0.0.1:8080/build.sh) ${{ env.build_version }} ${{ github.event.inputs.device }}
-        cd openwrt
-        if [ "${{ github.event.inputs.version }}" = release ]; then
-          tags=OpenWrt-$(git describe --abbrev=0 --tags)
-        else
-          tags=snapshot-24.10-$(git log -n 1 --date=format:"%Y%m%d" --format="%cd")-$(git log --pretty=format:"%h" -1)
-        fi
-        echo "latest_release=$tags" >>$GITHUB_ENV
-
-    - name: Extensive logs after a failed compilation
-      working-directory: /builder
-      if: steps.compile.outcome == 'failure'
-      run: |
-        cd openwrt
-        make V=s
-
-    - name: Delete Cached
-      if: ${{ github.event.inputs.ccache == 'true' && github.event.inputs.device != 'armv8' && github.event.inputs.device != 'nanopi-r4s' }}
       continue-on-error: true
       working-directory: /builder
       env:
-        GH_TOKEN: ${{ secrets.TOKEN_OPPEN321 }}
-        GH_REPO: ${{ github.repository }}
+        git_password: ${{ secrets.ftp_password }}
+        private_url: ${{ secrets.private_url }}
       run: |
-        gh cache delete openwrt-24.10-${{ github.event.inputs.device }}-ccache || true
+        [ "${{ matrix.model }}" != "netgear_r8500" ] && export KERNEL_CLANG_LTO=y
+        export BUILD_FAST=y ENABLE_CCACHE=y ENABLE_OTA=y ENABLE_BPF=y ENABLE_LTO=y ENABLE_LRNG=y USE_GCC15=y ENABLE_MOLD=y
+        bash <(curl -sS ${{ secrets.script_url_general }}) ${{ matrix.tag.type }} ${{ matrix.model }}
+        cd openwrt
+        tags=$(git describe --abbrev=0 --tags)
+        echo "latest_release=$tags" >>$GITHUB_ENV
 
-    - name: Save Cached
-      if: ${{ github.event.inputs.ccache == 'true' && github.event.inputs.device != 'armv8' && github.event.inputs.device != 'nanopi-r4s' }}
-      continue-on-error: true
-      uses: actions/cache/save@v4
-      with:
-        path: /builder/.ccache
-        key: openwrt-24.10-${{ github.event.inputs.device }}-ccache
-
-    - name: Create ccache tar files
-      if: ${{ github.event.inputs.ccache == 'true' && github.event.inputs.device == 'armv8' || github.event.inputs.device == 'nanopi-r4s' }}
-      continue-on-error: true
+    - name: Extensive logs after a failed compilation
+      if: steps.compile.outcome == 'failure'
       working-directory: /builder
       run: |
-        mkdir -p ccache
-        tar cf - .ccache | split -d -b 1800m - ccache/${{ github.event.inputs.device }}.tar.
-
-    - name: Upload Cached (releases - ccache)
-      if: ${{ github.event.inputs.ccache == 'true' && github.event.inputs.device == 'armv8' || github.event.inputs.device == 'nanopi-r4s' }}
-      continue-on-error: true
-      uses: ncipollo/release-action@v1.14.0
-      with:
-        name: ccache
-        allowUpdates: true
-        tag: ccache
-        commit: master
-        replacesArtifacts: true
-        prerelease: true
-        token: ${{ secrets.TOKEN_OPPEN321 }}
-        artifacts: |
-          ${{ env.build_dir }}/ccache/*
+        cd openwrt
+        make V=s IGNORE_ERRORS="n m"
 
     - name: Prepare Firmware Files
       working-directory: /builder
       run: |
         mkdir -p rom info
-        if [ "${{ github.event.inputs.device }}" = "nanopi-r4s" ]; then
+        if [ "${{ matrix.model }}" = "nanopi-r4s" ]; then
           cp -a openwrt/bin/targets/rockchip/*/*.img.gz rom/
           cp -a openwrt/bin/targets/rockchip/*/*-r4s.manifest info/manifest.txt
           cp -a openwrt/bin/targets/rockchip/*/config.buildinfo info/config.buildinfo
-          cd rom && sha256sum *gz > ../info/sha256sums.txt
-        elif [ "${{ github.event.inputs.device }}" = "nanopi-r5s" ]; then
+          cd rom && sha256sum * > ../info/sha256sums.txt
+        elif [ "${{ matrix.model }}" = "nanopi-r5s" ]; then
           cp -a openwrt/bin/targets/rockchip/*/*.img.gz rom/
           cp -a openwrt/bin/targets/rockchip/*/*.manifest info/manifest.txt
           cp -a openwrt/bin/targets/rockchip/*/config.buildinfo info/config.buildinfo
-          cd rom && sha256sum *gz > ../info/sha256sums.txt
-        elif [ "${{ github.event.inputs.device }}" = "x86_64" ]; then
+          cd rom && sha256sum * > ../info/sha256sums.txt
+        elif [ "${{ matrix.model }}" = "x86_64" ]; then
           cp -a openwrt/bin/targets/x86/*/*-ext4-combined-efi.img.gz rom/
           cp -a openwrt/bin/targets/x86/*/*-squashfs-combined-efi.img.gz rom/
           cp -a openwrt/bin/targets/x86/*/*-generic-rootfs.tar.gz rom/
           cp -a openwrt/bin/targets/x86/*/*-x86-64-generic.manifest info/manifest.txt
           cp -a openwrt/bin/targets/x86/*/config.buildinfo info/config.buildinfo
-          cd rom && sha256sum *gz > ../info/sha256sums.txt
-        elif [ "${{ github.event.inputs.device }}" = "netgear_r8500" ]; then
+          cd rom && sha256sum * > ../info/sha256sums.txt
+        elif [ "${{ matrix.model }}" = "netgear_r8500" ]; then
           cp -a openwrt/bin/targets/bcm53xx/generic/*-bcm53xx-generic-netgear_r8500-squashfs.chk rom/
           cp -a openwrt/bin/targets/bcm53xx/generic/*.manifest info/manifest.txt
           cp -a openwrt/bin/targets/bcm53xx/generic/config.buildinfo info/config.buildinfo
           cd rom && sha256sum * > ../info/sha256sums.txt
-        elif [ "${{ github.event.inputs.device }}" = "armv8" ]; then
+        elif [ "${{ matrix.model }}" = "armv8" ]; then
           tar zcf rom/u-boot-qemu_armv8.tar.gz -C openwrt/bin/targets/armsr/armv8*/ ./u-boot-qemu_armv8
           cp -a openwrt/bin/targets/armsr/armv8*/*-generic-initramfs-kernel.bin rom/
           cp -a openwrt/bin/targets/armsr/armv8*/*-generic-kernel.bin rom/
@@ -220,20 +142,30 @@ jobs:
         cd ..
         tar zcf rom/buildinfo_${{ matrix.model }}.tar.gz info
 
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ github.event.inputs.device }}-openwrt-${{ env.latest_release }}
-        path: ${{ env.build_dir }}/rom/*
+    - name: Create virtual machine images
+      if: ${{ matrix.model == 'x86_64' }}
+      working-directory: /builder
+      run: |
+        mkdir -p virtual_images
+        cp -a openwrt/bin/targets/x86/*/*-generic-squashfs-combined-efi.img.gz virtual_images/
+        gzip -dq virtual_images/*-generic-squashfs-combined-efi.img.gz || true
+        cd virtual_images
+        image_name=$(basename -s .img *.img)
+        qemu-img convert -f raw -O qcow2 *.img $image_name.qcow2
+        qemu-img convert -f raw -O vpc *.img $image_name.vhd
+        qemu-img convert -f raw -O vmdk *.img $image_name.vmdk
+        rm -f *.img
+        sha256sum * > sha256sums.txt
+        echo "<center><h1>x86_64 虚拟机平台镜像</h1></center>" > README.md
 
     - name: Create release
-      continue-on-error: true
-      uses: ncipollo/release-action@v1
+      uses: ncipollo/release-action@v1.14.0
       with:
-        name: ${{ env.latest_release }}
+        name: OpenWrt-${{ env.latest_release }}
         allowUpdates: true
         tag: ${{ env.latest_release }}
-        commit: openwrt-24.10
+        commit: main
         replacesArtifacts: true
         token: ${{ secrets.TOKEN_OPPEN321 }}
-        artifacts: ${{ env.build_dir }}/rom/*
+        artifacts: |
+          ${{ env.build_dir }}/rom/*
