--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -184,29 +184,29 @@ jobs:
       working-directory: /builder
       run: |
         mkdir -p rom info
-        if [ "${{ matrix.model }}" = "nanopi-r4s" ]; then
+        if [ "${{ github.event.inputs.device }}" = "nanopi-r4s" ]; then
           cp -a openwrt/bin/targets/rockchip/*/*.img.gz rom/
           cp -a openwrt/bin/targets/rockchip/*/*-r4s.manifest info/manifest.txt
           cp -a openwrt/bin/targets/rockchip/*/config.buildinfo info/config.buildinfo
-          cd rom && sha256sum * > ../info/sha256sums.txt
-        elif [ "${{ matrix.model }}" = "nanopi-r5s" ]; then
+          cd rom && sha256sum *gz > ../info/sha256sums.txt
+        elif [ "${{ github.event.inputs.device }}" = "nanopi-r5s" ]; then
           cp -a openwrt/bin/targets/rockchip/*/*.img.gz rom/
           cp -a openwrt/bin/targets/rockchip/*/*.manifest info/manifest.txt
           cp -a openwrt/bin/targets/rockchip/*/config.buildinfo info/config.buildinfo
-          cd rom && sha256sum * > ../info/sha256sums.txt
-        elif [ "${{ matrix.model }}" = "x86_64" ]; then
+          cd rom && sha256sum *gz > ../info/sha256sums.txt
+        elif [ "${{ github.event.inputs.device }}" = "x86_64" ]; then
           cp -a openwrt/bin/targets/x86/*/*-ext4-combined-efi.img.gz rom/
           cp -a openwrt/bin/targets/x86/*/*-squashfs-combined-efi.img.gz rom/
           cp -a openwrt/bin/targets/x86/*/*-generic-rootfs.tar.gz rom/
           cp -a openwrt/bin/targets/x86/*/*-x86-64-generic.manifest info/manifest.txt
           cp -a openwrt/bin/targets/x86/*/config.buildinfo info/config.buildinfo
-          cd rom && sha256sum * > ../info/sha256sums.txt
-        elif [ "${{ matrix.model }}" = "netgear_r8500" ]; then
+          cd rom && sha256sum *gz > ../info/sha256sums.txt
+        elif [ "${{ github.event.inputs.device }}" = "netgear_r8500" ]; then
           cp -a openwrt/bin/targets/bcm53xx/generic/*-bcm53xx-generic-netgear_r8500-squashfs.chk rom/
           cp -a openwrt/bin/targets/bcm53xx/generic/*.manifest info/manifest.txt
           cp -a openwrt/bin/targets/bcm53xx/generic/config.buildinfo info/config.buildinfo
           cd rom && sha256sum * > ../info/sha256sums.txt
-        elif [ "${{ matrix.model }}" = "armv8" ]; then
+        elif [ "${{ github.event.inputs.device }}" = "armv8" ]; then
           tar zcf rom/u-boot-qemu_armv8.tar.gz -C openwrt/bin/targets/armsr/armv8*/ ./u-boot-qemu_armv8
           cp -a openwrt/bin/targets/armsr/armv8*/*-generic-initramfs-kernel.bin rom/
           cp -a openwrt/bin/targets/armsr/armv8*/*-generic-kernel.bin rom/
@@ -218,7 +218,7 @@ jobs:
           cd rom && sha256sum * > ../info/sha256sums.txt
         fi
         cd ..
-        tar zcf rom/buildinfo_${{ matrix.model }}.tar.gz info
+        tar zcf rom/buildinfo_${{ github.event.inputs.device }}.tar.gz info
 
     - name: Create virtual machine images
       if: ${{ matrix.model == 'x86_64' }}
