--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -3,17 +3,6 @@ name: Build releases
 on:
   workflow_dispatch:
     inputs:
-      device:
-        description: 'Select the build device'
-        required: true
-        default: 'x86_64'
-        type: choice
-        options:
-          - 'armv8'
-          - 'nanopi-r4s'
-          - 'nanopi-r5s'
-          - 'netgear_r8500'
-          - 'x86_64'
       version:
         description: 'Select the build version'
         required: true
@@ -39,8 +28,18 @@ on:
 
 jobs:
   build:
-    name: Build ${{ github.event.inputs.device }}
+    name: Build ${{ matrix.device }}
     runs-on: ubuntu-24.04
+    strategy:
+      fail-fast: false
+      matrix:
+        device:
+          - 'armv8'
+          - 'nanopi-r4s'
+          - 'nanopi-r5s'
+          - 'netgear_r8500'
+          - 'x86_64'
+    
     defaults:
       run:
         shell: bash
@@ -96,25 +95,25 @@ jobs:
       uses: oppen321/actions@install-llvm
 
     - name: Restore Cached
-      if: ${{ github.event.inputs.ccache == 'true' && github.event.inputs.device != 'armv8' && github.event.inputs.device != 'nanopi-r4s' }}
+      if: ${{ github.event.inputs.ccache == 'true' && matrix.device != 'armv8' && matrix.device != 'nanopi-r4s' }}
       uses: actions/cache/restore@v4
       with:
         path: /builder/.ccache
-        key: openwrt-24.10-${{ github.event.inputs.device }}-ccache
+        key: openwrt-24.10-${{ matrix.device }}-ccache
 
     - name: Restore Cached (releases)
-      if: ${{ github.event.inputs.ccache == 'true' && github.event.inputs.device == 'armv8' || github.event.inputs.device == 'nanopi-r4s' }}
+      if: ${{ github.event.inputs.ccache == 'true' && matrix.device == 'armv8' || matrix.device == 'nanopi-r4s' }}
       continue-on-error: true
       working-directory: /builder
       run: |
-        curl -s https://api.github.com/repos/${{ github.repository }}/releases | grep 'browser_download_url' | grep ccache | grep ${{ github.event.inputs.device }} | awk -F '"' '{print $4}' | grep -v '^$' | xargs -n 1 wget -q
-        cat ${{ github.event.inputs.device }}.tar.* | tar -xf - || true
-        rm -rf ${{ github.event.inputs.device }}.tar.* || true
+        curl -s https://api.github.com/repos/${{ github.repository }}/releases | grep 'browser_download_url' | grep ccache | grep ${{ matrix.device }} | awk -F '"' '{print $4}' | grep -v '^$' | xargs -n 1 wget -q
+        cat ${{ matrix.device }}.tar.* | tar -xf - || true
+        rm -rf ${{ matrix.device }}.tar.* || true
         [ -d .ccache ] && cache_size=$(du -sb .ccache | awk '{print $1}') || cache_size=0
         cache_size_mb=$(echo "scale=0; ${cache_size} / (1024 * 1024)" | bc)
         echo "Cache Size: ~${cache_size_mb} MB (${cache_size} B)"
         echo "Cache restored successfully"
-        echo "Cache restored from key: ${{ github.event.inputs.device }}"
+        echo "Cache restored from key: ${{ matrix.device }}"
 
     - name: Compile OpenWrt
       working-directory: /builder
@@ -123,7 +122,7 @@ jobs:
       run: |
         export ${{ github.event.inputs.build_options }} LAN=${{ github.event.inputs.lan_addr }} USE_GCC15=y
         [ ${{ github.event.inputs.ccache }} = 'true' ] && export ENABLE_CCACHE=y
-        bash <(curl -sS http://127.0.0.1:8080/build.sh) ${{ env.build_version }} ${{ github.event.inputs.device }}
+        bash <(curl -sS http://127.0.0.1:8080/build.sh) ${{ env.build_version }} ${{ matrix.device }}
         cd openwrt
         if [ "${{ github.event.inputs.version }}" = release ]; then
           tags=OpenWrt-$(git describe --abbrev=0 --tags)
@@ -140,33 +139,33 @@ jobs:
         make V=s
 
     - name: Delete Cached
-      if: ${{ github.event.inputs.ccache == 'true' && github.event.inputs.device != 'armv8' && github.event.inputs.device != 'nanopi-r4s' }}
+      if: ${{ github.event.inputs.ccache == 'true' && matrix.device != 'armv8' && matrix.device != 'nanopi-r4s' }}
       continue-on-error: true
       working-directory: /builder
       env:
         GH_TOKEN: ${{ secrets.TOKEN_OPPEN321 }}
         GH_REPO: ${{ github.repository }}
       run: |
-        gh cache delete openwrt-24.10-${{ github.event.inputs.device }}-ccache || true
+        gh cache delete openwrt-24.10-${{ matrix.device }}-ccache || true
 
     - name: Save Cached
-      if: ${{ github.event.inputs.ccache == 'true' && github.event.inputs.device != 'armv8' && github.event.inputs.device != 'nanopi-r4s' }}
+      if: ${{ github.event.inputs.ccache == 'true' && matrix.device != 'armv8' && matrix.device != 'nanopi-r4s' }}
       continue-on-error: true
       uses: actions/cache/save@v4
       with:
         path: /builder/.ccache
-        key: openwrt-24.10-${{ github.event.inputs.device }}-ccache
+        key: openwrt-24.10-${{ matrix.device }}-ccache
 
     - name: Create ccache tar files
-      if: ${{ github.event.inputs.ccache == 'true' && github.event.inputs.device == 'armv8' || github.event.inputs.device == 'nanopi-r4s' }}
+      if: ${{ github.event.inputs.ccache == 'true' && matrix.device == 'armv8' || matrix.device == 'nanopi-r4s' }}
       continue-on-error: true
       working-directory: /builder
       run: |
         mkdir -p ccache
-        tar cf - .ccache | split -d -b 1800m - ccache/${{ github.event.inputs.device }}.tar.
+        tar cf - .ccache | split -d -b 1800m - ccache/${{ matrix.device }}.tar.
 
     - name: Upload Cached (releases - ccache)
-      if: ${{ github.event.inputs.ccache == 'true' && github.event.inputs.device == 'armv8' || github.event.inputs.device == 'nanopi-r4s' }}
+      if: ${{ github.event.inputs.ccache == 'true' && matrix.device == 'armv8' || matrix.device == 'nanopi-r4s' }}
       continue-on-error: true
       uses: ncipollo/release-action@v1.14.0
       with:
@@ -184,29 +183,29 @@ jobs:
       working-directory: /builder
       run: |
         mkdir -p rom info
-        if [ "${{ github.event.inputs.device }}" = "nanopi-r4s" ]; then
+        if [ "${{ matrix.device }}" = "nanopi-r4s" ]; then
           cp -a openwrt/bin/targets/rockchip/*/*.img.gz rom/
           cp -a openwrt/bin/targets/rockchip/*/*-r4s.manifest info/manifest.txt
           cp -a openwrt/bin/targets/rockchip/*/config.buildinfo info/config.buildinfo
           cd rom && sha256sum *gz > ../info/sha256sums.txt
-        elif [ "${{ github.event.inputs.device }}" = "nanopi-r5s" ]; then
+        elif [ "${{ matrix.device }}" = "nanopi-r5s" ]; then
           cp -a openwrt/bin/targets/rockchip/*/*.img.gz rom/
           cp -a openwrt/bin/targets/rockchip/*/*.manifest info/manifest.txt
           cp -a openwrt/bin/targets/rockchip/*/config.buildinfo info/config.buildinfo
           cd rom && sha256sum *gz > ../info/sha256sums.txt
-        elif [ "${{ github.event.inputs.device }}" = "x86_64" ]; then
+        elif [ "${{ matrix.device }}" = "x86_64" ]; then
           cp -a openwrt/bin/targets/x86/*/*-ext4-combined-efi.img.gz rom/
           cp -a openwrt/bin/targets/x86/*/*-squashfs-combined-efi.img.gz rom/
           cp -a openwrt/bin/targets/x86/*/*-generic-rootfs.tar.gz rom/
           cp -a openwrt/bin/targets/x86/*/*-x86-64-generic.manifest info/manifest.txt
           cp -a openwrt/bin/targets/x86/*/config.buildinfo info/config.buildinfo
           cd rom && sha256sum *gz > ../info/sha256sums.txt
-        elif [ "${{ github.event.inputs.device }}" = "netgear_r8500" ]; then
+        elif [ "${{ matrix.device }}" = "netgear_r8500" ]; then
           cp -a openwrt/bin/targets/bcm53xx/generic/*-bcm53xx-generic-netgear_r8500-squashfs.chk rom/
           cp -a openwrt/bin/targets/bcm53xx/generic/*.manifest info/manifest.txt
           cp -a openwrt/bin/targets/bcm53xx/generic/config.buildinfo info/config.buildinfo
           cd rom && sha256sum * > ../info/sha256sums.txt
-        elif [ "${{ github.event.inputs.device }}" = "armv8" ]; then
+        elif [ "${{ matrix.device }}" = "armv8" ]; then
           tar zcf rom/u-boot-qemu_armv8.tar.gz -C openwrt/bin/targets/armsr/armv8*/ ./u-boot-qemu_armv8
           cp -a openwrt/bin/targets/armsr/armv8*/*-generic-initramfs-kernel.bin rom/
           cp -a openwrt/bin/targets/armsr/armv8*/*-generic-kernel.bin rom/
@@ -218,10 +217,10 @@ jobs:
           cd rom && sha256sum * > ../info/sha256sums.txt
         fi
         cd ..
-        tar zcf rom/buildinfo_${{ github.event.inputs.device }}.tar.gz info
+        tar zcf rom/buildinfo_${{ matrix.device }}.tar.gz info
 
     - name: Create virtual machine images
-      if: ${{ github.event.inputs.device == 'x86_64' }}
+      if: ${{ matrix.device == 'x86_64' }}
       working-directory: /builder
       run: |
         mkdir -p virtual_images
