--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -241,7 +241,7 @@ jobs:
         name: OpenWrt-${{ env.latest_release }}
         allowUpdates: true
         tag: ${{ env.latest_release }}
-        commit: main
+        commit: openwrt-24.10
         replacesArtifacts: true
         token: ${{ secrets.TOKEN_OPPEN321 }}
         artifacts: |
