--- a/.github/workflows/Sync.yml
+++ b/.github/workflows/Sync.yml
@@ -16,12 +16,22 @@ jobs:
       - name: Install jq
         run: sudo apt-get install -y jq
 
+      - name: Get latest workflow run
+        id: workflow
+        run: |
+          run_id=$(curl -s -H "Authorization: token ${{ secrets.TOKEN_OPPEN321 }}" \
+            "https://api.github.com/repos/${{ github.repository }}/actions/workflows/build.yml/runs?status=success&per_page=1" \
+            | jq -r '.workflow_runs[0].id')
+          echo "run_id=$run_id" >> $GITHUB_OUTPUT
+
       - name: Download all OTA files
         uses: actions/download-artifact@v4
         with:
+          name: ota-*
           path: ota_files
-          pattern: ota-*
-          merge-multiple: true
+          github-token: ${{ secrets.TOKEN_OPPEN321 }}
+          repository: ${{ github.repository }}
+          run-id: ${{ steps.workflow.outputs.run_id }}
 
       - name: Merge OTA Info
         run: |
