--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -286,8 +286,9 @@ jobs:
         run: |
           cd merged
           git init
-          git config user.name "GitHub Action"
-          git config user.email "action@github.com"
+          git config user.name "Gitea Action"
+          git config user.email "action@gitea.com"
           git add .
           git commit -m "Update OTA information"
+          git branch -M main
           git push -f https://zhao:${{ secrets.GITEA_PASSWORD }}@git.kejizero.online/zhao/OTA.git main
